--- a/6.html
+++ b/6.html
@@ -14,7 +14,7 @@
         <div class="caja1">
             <h1>hola@!</h1>
             <div class="menu-nav">
-                <a class="boton-nav " href="/inicio.html"><button type="button" class="btn btn-outline-danger">inicio</button></a>
+                <a class="boton-nav " href="/index.html"><button type="button" class="btn btn-outline-danger">inicio</button></a>
                 <a class="boton-nav" href="/2.html"><button type="button" class="btn btn-outline-danger">2</button></a>
                 <a class="boton-nav" href="/3.html"><button type="button" class="btn btn-outline-danger">3</button></a>
                 <a class="boton-nav" href="/4.html"><button type="button" class="btn btn-outline-danger">4</button></a>
