--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <div class="caja1">
         <h1>hola@!</h1>
         <div class="menu-nav .col-sm-12 ">
-            <a class="boton-nav " href="/index.html"><button type="button" class="btn btn-outline-danger">inicio</button></a>
-            <a class="boton-nav" href="/2.html"><button type="button" class="btn btn-outline-danger">2</button></a>
-            <a class="boton-nav" href="/3.html"><button type="button" class="btn btn-outline-danger">3</button></a>
-            <a class="boton-nav" href="/4.html"><button type="button" class="btn btn-outline-danger">4</button></a>
-            <a class="boton-nav" href="/5.html"><button type="button" class="btn btn-outline-danger">5</button></a>
-            <a class="boton-nav" href="/6.html"><button type="button" class="btn btn-outline-danger">6</button></a>
-            <a class="boton-nav" href="/7.html"><button type="button" class="btn btn-outline-danger">7</button></a>
-            <a class="boton-nav" href="/8.html"><button type="button" class="btn btn-outline-danger">8</button></a>
-            <a class="boton-nav" href="/9.html"><button type="button" class="btn btn-outline-danger">9</button></a>
+            <a class="boton-nav " href="index.html"><button type="button" class="btn btn-outline-danger">inicio</button></a>
+            <a class="boton-nav" href="2.html"><button type="button" class="btn btn-outline-danger">2</button></a>
+            <a class="boton-nav" href="3.html"><button type="button" class="btn btn-outline-danger">3</button></a>
+            <a class="boton-nav" href="4.html"><button type="button" class="btn btn-outline-danger">4</button></a>
+            <a class="boton-nav" href="5.html"><button type="button" class="btn btn-outline-danger">5</button></a>
+            <a class="boton-nav" href="6.html"><button type="button" class="btn btn-outline-danger">6</button></a>
+            <a class="boton-nav" href="7.html"><button type="button" class="btn btn-outline-danger">7</button></a>
+            <a class="boton-nav" href="8.html"><button type="button" class="btn btn-outline-danger">8</button></a>
+            <a class="boton-nav" href="9.html"><button type="button" class="btn btn-outline-danger">9</button></a>
         </div>
     </div>
 
