--- a/5.html
+++ b/5.html
@@ -15,7 +15,7 @@
         <div class="caja1">
             <h1>hola@!</h1>
             <div class="menu-nav">
-                <a class="boton-nav " href="index.html"><button type="button" class="btn btn-outline-danger">inicio</button></a>
+                <a class="boton-nav " href="index.html"><button type="button" class="btn btn-outline-danger">1</button></a>
                 <a class="boton-nav" href="2.html"><button type="button" class="btn btn-outline-danger">2</button></a>
                 <a class="boton-nav" href="3.html"><button type="button" class="btn btn-outline-danger">3</button></a>
                 <a class="boton-nav" href="4.html"><button type="button" class="btn btn-outline-danger">4</button></a>
@@ -75,5 +75,6 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
