--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="caja1">
         <h1>hola@!</h1>
         <div class="menu-nav .col-sm-12 ">
-            <a class="boton-nav " href="index.html"><button type="button" class="btn btn-outline-danger">inicio</button></a>
+            <a class="boton-nav " href="index.html"><button type="button" class="btn btn-outline-danger">1</button></a>
             <a class="boton-nav" href="2.html"><button type="button" class="btn btn-outline-danger">2</button></a>
             <a class="boton-nav" href="3.html"><button type="button" class="btn btn-outline-danger">3</button></a>
             <a class="boton-nav" href="4.html"><button type="button" class="btn btn-outline-danger">4</button></a>
@@ -89,5 +89,8 @@
             </div>
         </div>
     </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
